[gd_scene load_steps=4 format=3 uid="uid://cnuxc0r3q6s61"]

[ext_resource type="Script" uid="uid://bftusuensk2y8" path="res://dragable.gd" id="1_3ghio"]
[ext_resource type="Texture2D" uid="uid://cosrjqoaj3ysd" path="res://wireStraight.png" id="1_qiil8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ghio"]
radius = 33.83785

[node name="dragable" type="Node2D"]
script = ExtResource("1_3ghio")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(292, 189)
shape = SubResource("CircleShape2D_3ghio")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(292, 188)
texture = ExtResource("1_qiil8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="change_cursor_hand"]
[connection signal="mouse_exited" from="Area2D" to="." method="change_cursor_back"]
